[package]
name = "img_upscaler"
version = "0.1.0"
edition = "2024"

[dependencies]

# CLI parsing
clap = { version = "4.3", features = ["derive"] }

# Walk filesystem recursively
walkdir = "2.3"

# Image IO and resizing
image = "0.24"

# Simple error handling
anyhow = "1.0"

# Parallel file processing
rayon = "1.7"

# Optional: wiring for using the `usls` crate (super-resolution models / hardware acceleration)
# To enable, run: cargo build --features use-usls --no-default-features
[features]
use-usls = ["usls"]

[dependencies.usls]
version = "0.1"
optional = true
